# mac-timer

./: CLAUDE.md  README.md  eslint.config.mjs  index.html  notification.html  overlay.html  package-lock.json  package.json  vite.config.ts
src/: main.ts  notification-window.ts  notification.ts  overlay-window.ts  pomodoro-ui.ts  styles.css  timer-ui.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  pomodoro.rs  runner.rs  timer.rs  tray.rs
src/__tests__/: notification.test.ts  pomodoro-ui-dom.test.ts  timer-ui-dom.test.ts  timer-ui.test.ts
